--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <header>
         <section class="navContainer">
             <div id="mainLogo">
-                <img src="/images/loozogo.png" width="60px">
+                <img src="images/loozogo.png" width="60px">
                 <!--Header logo -->
             </div>
             <nav>
