--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <section class="aboutInner">
 
             <div class="aboutImage">
-                <img src="/images/aboutImg.jpg" width="500px " height="500px">
+                <img src="images/aboutImg.jpg" width="500px " height="500px">
             </div>
 
             <div class="aboutInfo">
