--- a/index.html
+++ b/index.html
@@ -144,6 +144,7 @@
                             <h4> &nbsp;&nbsp;&nbsp; JS</h4>
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
                             &nbsp;
                             &nbsp;
                             &nbsp;
@@ -184,6 +185,7 @@
 
                         <div class="itemthree">
                             <h4> React</h4>
+                            <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
                             &nbsp;
                             &nbsp;
