--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
 
 
                         <div class="itemthree">
-                            <h4> &nbsp;&nbsp;&nbsp; SEO</h4>
+                            <h4> &nbsp;&nbsp; SEO</h4>
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
