--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                     <div class="twoRow">
 
                         <div class="itemone">
-                            <h4> &nbsp;&nbsp; Wordpress</h4>
+                            <h4>  Wordpress</h4>
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
@@ -213,7 +213,7 @@
 
 
                         <div class="itemtwo">
-                            <h4> &nbsp; Motion GFX</h4>
+                            <h4> Motion GFX</h4>
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
@@ -225,7 +225,7 @@
 
 
                         <div class="itemthree">
-                            <h4> &nbsp; SEO</h4>
+                            <h4> SEO</h4>
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
