--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <br>
                 <div class="heroSub">
                     <hr>
-                    <h3> &nbsp; A Creative Freelancer & Search Engine Optimizer</h3>
+                    <h3> &nbsp; Creative Front-End Developer & Passionate Freelancer.</h3>
                 </div>
                 <br>
                 <br>
